--- a/kafka-dlq-producer/values.properties
+++ b/kafka-dlq-producer/values.properties
@@ -1,3 +1,3 @@
-bootstrap.servers=a5bd8c7c8173942b0b0d32ccb3ae5c10-560556088.ap-northeast-1.elb.amazonaws.com:9092,a51b9a43c1d0c4035a1cae110542580f-2015572127.ap-northeast-1.elb.amazonaws.com:9092,ae3a87c5343504094afbf345e32a14ff-879416660.ap-northeast-1.elb.amazonaws.com:9092
-schema.registry.url=http://ab6be3739cede4f6e8f3f09ea240f1d3-303141603.ap-northeast-1.elb.amazonaws.com:80
-topic.name=plipplip
+bootstrap.servers=broker1:9092,broker2:9092,broker3:9092
+schema.registry.url=http://endpoint:port
+topic.name=success
